--- a/MBTIApp/gradle.properties
+++ b/MBTIApp/gradle.properties
@@ -22,4 +22,4 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-apiUrl="https://reqres.in/api"
+apiUrl="http://10.0.2.2:3000/"
