Add MBTITest endpoint connection, change questions count, add register session to saved unfinished MBTI Test during register

--- a/MBTIApp/app/build.gradle
+++ b/MBTIApp/app/build.gradle
@@ -18,6 +18,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField 'String', 'apiUrl', apiUrl
+        buildConfigField 'String', 'mbtiUrl', mbtiUrl
     }
 
     buildTypes {
