--- a/MBTIApp/gradle.properties
+++ b/MBTIApp/gradle.properties
@@ -23,3 +23,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 apiUrl="http://103.148.77.8:3000/"
+mbtiUrl="http://10.0.2.2:5000/"
