--- a/MBTIApp/app/build.gradle
+++ b/MBTIApp/app/build.gradle
@@ -43,6 +43,7 @@ android {
 
 dependencies {
 
+    // Default Dependencies
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
@@ -51,11 +52,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    // RecyclerView for MBTI Recommendation Lists
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
 
+    // Retrofit for API Connection
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
-    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.11'
 
 }
