--- a/MBTIApp/gradle.properties
+++ b/MBTIApp/gradle.properties
@@ -22,5 +22,5 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-apiUrl="http://103.148.77.8:3000/"
-mbtiUrl="http://10.0.2.2:5000/"
+apiUrl="http://us.avalondn.asia:3000/"
+mbtiUrl="https://sg.avalondn.asia/"
