Add MBTI Result endpoint connection

--- a/MBTIApp/gradle.properties
+++ b/MBTIApp/gradle.properties
@@ -22,5 +22,5 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-apiUrl="http://us.avalondn.asia:3000/"
+apiUrl="https://capstone-mbtiedu.et.r.appspot.com/"
 mbtiUrl="https://sg.avalondn.asia/"
