--- a/MBTIApp/gradle.properties
+++ b/MBTIApp/gradle.properties
@@ -23,4 +23,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 apiUrl="https://capstone-mbtiedu.et.r.appspot.com/"
-mbtiUrl="https://sg.avalondn.asia/"
+mbtiUrl="https://fastapi-model-deployment3-bnqesbt4ga-et.a.run.app/"
